@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-12-10T16:17:30Z",
+  "timestamp" : "2022-12-11T01:13:19Z",
   "count_outdated" : 712,
   "uniques_outdated" : 401,
-  "count" : 730,
-  "uniques" : 409,
+  "count" : 735,
+  "uniques" : 410,
   "clones" : [
     {
       "timestamp": "2022-11-27T00:00:00Z",
@@ -49,10 +49,10 @@
     },
     {
       "timestamp": "2022-12-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 6,
+      "count_minmax": [ 1, 6 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
