@@ -1,6 +1,6 @@
 {
-  "count": 18,
-  "uniques": 5,
+  "count": 23,
+  "uniques": 6,
   "clones": [
     {
       "timestamp": "2022-11-27T00:00:00Z",
@@ -34,8 +34,8 @@
     },
     {
       "timestamp": "2022-12-10T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 6,
+      "uniques": 2
     }
   ]
 }
